[Step2] mirage.kim 미션 제출합니다. (#1)
* feat: add e2e test generate skill

* chore: RestAssured 의존성 및 테스트 환경 설정 추가

* test: Category API E2E 인수 테스트 추가

* refactor: CategoryController에서 CategoryService 추출

* chore: logical-commit 스킬 추가

* refactor: CategoryService 클래스 레벨 @Transactional 적용

* test: Member API E2E 인수 테스트 추가

* test: Product API E2E 인수 테스트 추가

* test: Option API E2E 인수 테스트 추가

* test: Wish API E2E 인수 테스트 추가

* test: Order API E2E 인수 테스트 추가

* refactor: MemberController에서 MemberService 추출

* refactor: ProductController에서 ProductService 추출

* refactor: OptionController에서 OptionService 추출

* refactor: WishController에서 WishService 추출

* refactor: OrderController에서 OrderService 추출

* refactor: exclude exception handler

* refactor: lint format

* refactor: add comment

* refactor: add wish repository in order service

* refactor: delete @Autowired

* refactor: var를 명시적 타입 선언으로 통일

* refactor: 로컬 변수의 불필요한 final 제거

* refactor: 미사용 @Autowired import 제거

* docs: 리팩토링 진행 내역 정리

* docs: 리팩토링 판단 근거 및 논의 기록 추가

코드 분석 결과와 리팩토링 의사결정 근거를 README에 문서화한다.
- 현황 분석: 미사용 코드, Service 계층 부재, Controller 비즈니스 로직 집중
- Service 도입, @Transactional 배치, @ExceptionHandler 유지 근거
- 리팩토링 순서 결정 (인수 테스트 우선)
- 코드 스타일 통일 항목별 이유 추가
- 사용한 Claude 분석 스킬 정리

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

* refactor: 미사용 getter 제거 (getOptions, getMemberId)

* docs: dead code 목록에서 제거된 getter 항목 정리

* test: KakaoAuth API E2E 인수 테스트 추가

* refactor: KakaoAuthController에서 서비스 계층 분리

* docs: 스킬 목록과 분석 작업 내역 섹션 분리

기존 "사용한 Claude 스킬" 섹션의 분석 작업을 "분석 작업 내역"으로 분리하고,
실제 .claude/skills 스킬 목록을 "사용한 Claude Code 스킬" 섹션으로 추가

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

* fix: 카테고리 삭제 인수 테스트 기대 상태코드 수정 (500 → 404)

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

* Revert "fix: 카테고리 삭제 인수 테스트 기대 상태코드 수정 (500 → 404)"

This reverts commit e971b97598c32bf3d7f1265b3035e389ed7ef876.

* refactor: 개별 Controller의 @ExceptionHandler를 @ControllerAdvice로 통합

MemberController, OptionController, Produ