@@ -1,21 +1,19 @@
 package gift.option;
 
-import gift.product.Product;
-import gift.product.ProductRepository;
-import jakarta.validation.Valid;
+import java.net.URI;
+import java.util.List;
+
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.net.URI;
-import java.util.List;
-import java.util.stream.Collectors;
+import jakarta.validation.Valid;
 
 /*
  * Each product must have at least one option at all times.
@@ -24,24 +22,17 @@ import java.util.stream.Collectors;
 @RestController
 @RequestMapping(path = "/api/products/{productId}/options")
 public class OptionController {
-    private final OptionRepository optionRepository;
-    private final ProductRepository productRepository;
+    private final OptionService optionService;
 
-    public OptionController(OptionRepository optionRepository, ProductRepository productRepository) {
-        this.optionRepository = optionRepository;
-        this.productRepository = productRepository;
+    public OptionController(OptionService optionService) {
+        this.optionService = optionService;
     }
 
     @GetMapping
     public ResponseEntity<List<OptionResponse>> getOptions(@PathVariable Long productId) {
-        Product product = productRepository.findById(productId).orElse(null);
-        if (product == null) {
-            return ResponseEntity.notFound().build();
-        }
-        List<OptionResponse> options = optionRepository.findByProductId(productId).stream()
+        return ResponseEntity.ok(optionService.findByProductId(productId).stream()
             .map(OptionResponse::from)
-            .collect(Collectors.toList());
-        return ResponseEntity.ok(options);
+            .toList());
     }
 
     @PostMapping
@@ -49,21 +40,20 @@ public class OptionController {
         @PathVariable Long productId,
         @Valid @RequestBody OptionRequest request
     ) {
-        validateName(request.name());
+        Option option = optionService.create(productId, request);
+        OptionResponse response = OptionResponse.from(option);
+        URI location = URI.create("/api/products/" + productId + "/options/" + response.id());
+        return ResponseEntity.created(location).body(response);
+    }
 
-        Product product = productRepository.findById(productId).orElse(null);
-        if (product == null) {
-            return ResponseEntity.notFound().build();
-        }
-
-        if (optionRepository.existsByProductIdAndName(productId, request.name())) {
-            throw new IllegalArgumentException("이미 존재하는 옵션명입니다.");
-        }
-
-        Option saved = optionRepository.save(new Option(product, request.name(), request.quantity()));
-        URI location = URI.create("/api/products/" + productId + "/options/" + saved.getId());
-        return ResponseEntity.created(location)
-            .body(OptionResponse.from(saved));
+    @PutMapping(path = "/{optionId}")
+    public ResponseEntity<OptionResponse> updateOption(
+        @PathVariable Long productId,
+        @PathVariable Long optionId,
+        @Valid @RequestBody OptionRequest request
+    ) {
+        Option option = optionService.update(productId, optionId, request);
+        return ResponseEntity.ok(OptionResponse.from(option));
     }
 
     @DeleteMapping(path = "/{optionId}")
@@ -71,34 +61,7 @@ public class OptionController {
         @PathVariable Long productId,
         @PathVariable Long optionId
     ) {
-        Product product = productRepository.findById(productId).orElse(null);
-        if (product == null) {
-            return ResponseEntity.notFound().build();
-        }
-
-        List<Option> options = optionRepository.findByProductId(productId);
-        if (options.size() <= 1) {
-            throw new IllegalArgumentException("옵션이 1개인 상품은 옵션을 삭제할 수 없습니다.");
-        }
-
-        Option option = optionRepository.findById(optionId).orElse(null);
-        if (option == null || !option.getProduct().getId().equals(productId)) {
-            return ResponseEntity.notFound().build();
-        }
-
-        optionRepository.delete(option);
+        optionService.delete(productId, optionId);
         return ResponseEntity.noContent().build();
-    }
-
-    private void validateName(String name) {
-        List<String> errors = OptionNameValidator.validate(name);
-        if (!errors.isEmpty()) {
-            throw new IllegalArgumentException(String.join(", ", errors));
-        }
-    }
-
-    @ExceptionHandler(IllegalArgumentException.class)
-    public ResponseEntity<String> handleIllegalArgument(IllegalArgumentException e) {
-        return ResponseEntity.badRequest().body(e.getMessage());
     }
 }
